--- a/dmgcapp/templates/dmgcapp/calculator.html
+++ b/dmgcapp/templates/dmgcapp/calculator.html
@@ -9,6 +9,23 @@ Here is Calculator Page.
 <a href="{% url 'index' %}">home</a>
 <a href="search/{{ today_string }}">search</a>
 <hr>
-{{ food_info_list }}
+담은 칼로리: {{ today_calories }}<br>
+담은 탄수화물: {{ today_carb }}<br>
+담은 단백질: {{ today_prot }}<br>
+담은 지방: {{ today_fat }}<br>
+<hr>
+<div>
+    {% for calories, food_name, carb, prot, fat, food_code, year, month, day in parsed_food_info_list %}
+        열량: {{ calories }}<br>
+        음식 이름: {{ food_name }}<br>
+        탄수화물: {{ prot }}<br>
+        지방: {{ fat }}<br>
+        단백질: {{ prot }}<br>
+        음식 코드: {{ food_code }}<br>
+        담은 날짜: {{ year }}년 {{ month }}월 {{ day }}일
+        <hr>
+    {% endfor %}
+</div>
+
 </body>
 </html>
