--- a/dmgcapp/templates/dmgcapp/index.html
+++ b/dmgcapp/templates/dmgcapp/index.html
@@ -6,11 +6,12 @@
     <title>index</title>
 </head>
 <body>
+{{ delete_check_list }}
 {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">로그아웃</a>
     <a href="search/{{ today_string }}">음식담기</a>
     <a href="{% url 'profile' %}">프로필</a>
-    <a href="{% url 'calculator' %}">calculator</a>
+    <a href="calculator/{{ today_string }}">calculator</a>
 {% else %}
     <a href="{% url 'login' %}">로그인</a>
     <a href="{% url 'signup' %}">회원가입</a>
