--- a/dmgcapp/templates/dmgcapp/index.html
+++ b/dmgcapp/templates/dmgcapp/index.html
@@ -9,7 +9,7 @@
 {{ delete_check_list }}
 {% if user.is_authenticated %}
     <a href="{% url 'logout' %}">로그아웃</a>
-    <a href="search/{{ today_string }}">음식담기</a>
+    <a href="search/{{ today_string }}">search</a>
     <a href="{% url 'profile' %}">프로필</a>
     <a href="calculator/{{ today_string }}">calculator</a>
 {% else %}
