[0716] signup, login page에 error flash message 출력

--- a/dmgcapp/templates/dmgcapp/signup.html
+++ b/dmgcapp/templates/dmgcapp/signup.html
@@ -9,6 +9,11 @@
 <a href="{% url 'login' %}">login</a>
 <a href="{% url 'index' %}">home</a>
     <div class="signupForm">
+        {% if messages %}
+            {% for message in messages %}
+                {{ message.tags }}! {{ message.message }}
+            {% endfor %}
+        {% endif %}
         <form method="POST">
             {% csrf_token %}
             <div>
