--- a/dmgcapp/templates/dmgcapp/login.html
+++ b/dmgcapp/templates/dmgcapp/login.html
@@ -9,7 +9,13 @@
     <a href="{% url 'index' %}">home</a>
     <a href="{% url 'signup' %}">회원가입</a>
     Here is login page
+
 <div>
+    {% if messages %}
+        {% for message in messages %}
+            {{ message.tags }}! {{ message.message }}
+        {% endfor %}
+    {% endif %}
     <form method="POST">
         {% csrf_token %}
             <div>
