--- a/dmgcapp/templates/dmgcapp/index.html
+++ b/dmgcapp/templates/dmgcapp/index.html
@@ -1,21 +1,18 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
-{{ delete_check_list }}
-{% if user.is_authenticated %}
-    <a href="{% url 'logout' %}">로그아웃</a>
-    <a href="search/{{ today_string }}">search</a>
-    <a href="{% url 'profile' %}">프로필</a>
-    <a href="calculator/{{ today_string }}">calculator</a>
-{% else %}
-    <a href="{% url 'login' %}">로그인</a>
-    <a href="{% url 'signup' %}">회원가입</a>
-{% endif %}
-Here is index page.
+{% extends "layout.html" %}
+{% block content %}
+
+<body class="background-blur-image">
+    <div class="background-image position-fixed"></div>
+    <div class="nav">
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">logout</a>
+        <a href="search/{{ today_string }}">search</a>
+        <a href="{% url 'profile' %}">profile</a>
+        <a href="calculator/{{ today_string }}">calculator</a>
+        {% else %}
+            <a href="{% url 'login' %}" >login</a>
+            <a href="{% url 'signup' %}" >sign up</a>
+        {% endif %}
+    </div>
 </body>
-</html>
+{% endblock content %}
