--- a/dmgcapp/templates/dmgcapp/login.html
+++ b/dmgcapp/templates/dmgcapp/login.html
@@ -1,29 +1,29 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>login</title>
-</head>
-<body>
-    <a href="{% url 'index' %}">home</a>
-    <a href="{% url 'signup' %}">회원가입</a>
-    Here is login page
-<div>
-    <form method="POST">
-        {% csrf_token %}
-            <div>
-                <label for="username">아이디</label>
-                <input type="text" name="username" id="username" required>
-            </div>
-            <div>
-                <label for="password">비밀번호</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div>
-                <button type="submit">로그인</button>
-            </div>
-    </form>
-</div>
+{% extends "layout.html" %}
+{% block content %}
+
+<body class="background-blur-image">
+    <div class="background-image position-fixed"></div>
+    <div id="container-login" class="position-fixed w-100 flex-column">
+        <div class="nav">
+            <a href="{% url 'index' %}">home</a>
+            <a href="{% url 'signup' %}">sign up</a>
+        </div>
+        <div class="justify-content-center" id="container-login">
+            <form method="POST" id="form-login" class="w-50">
+                {% csrf_token %}
+                    <div>
+{#                        <label for="username">아이디</label>#}
+                        <input type="text" name="username" id="username" required placeholder="USERNAME">
+                    </div>
+                    <div>
+{#                        <label for="password">비밀번호</label>#}
+                        <input type="password" name="password" id="password" required placeholder="PASSWORD">
+                    </div>
+                    <div>
+                        <button type="submit">로그인</button>
+                    </div>
+            </form>
+        </div>
+    </div>
 </body>
-</html>
+{% endblock content %}
