--- a/dmgcapp/templates/dmgcapp/search.html
+++ b/dmgcapp/templates/dmgcapp/search.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>search</title>
+    <title>다머거치 검색</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
 </head>
 <body id="background">
 {#<a href="{% url 'index' %}">home</a>#}
@@ -14,58 +15,101 @@
        <a href="/dmgcapp/search/{{ day_string }}" id="week">{{ month }}.{{ day }}</a>
     {% endfor %}
 </div>
-<div>
-    <div>
-
-        {% if contained_food_name %}
-            <div>담은 음식: {{ contained_food_name }}</div>
-        {% endif %}
-        {% if contained_calories_amount %}
-            <div>담은 열량: {{ contained_calories_amount }}kcal</div>
-        {% endif %}
-        {% if contained_carbohydrate %}
-            <div>담은 탄수화물: {{ contained_carbohydrate }}kcal</div>
-        {% endif %}
-        {% if contained_protein %}
-            <div>담은 단백질: {{ contained_protein }}kcal</div>
-        {% endif %}
-        {% if contained_fat %}
-            <div>담은 지방: {{ contained_fat }}kcal</div>
-        {% endif %}
-    </div>
-    <div>
-        <form method="POST">
-            {% csrf_token %}
-            <div>
-                <label for="search">검색</label>
-                <input type="text" name="search" id="search">
-            </div>
-            <div>
-                <button type="submit" id="search_button">검색</button>
-            </div>
-        </form>
-        <hr>
-    </div>
     {% if calories %}
-    <div>
-        <form method="POST">
+<div id="container-search-result" class="flex-column">
+    <div id="background-search" class="zindex-0">
+        SEARCH
+    </div>
+    <form id="form-search" class="zindex-1" method="post">
         {% csrf_token %}
-            <input type="submit" value="담기"><br>
-            {% for maker_name, food_name, research_year, food_size, calories, carbohydrate, protein, fat, saturated_fatty_acid, sugars, food_code in food_info_list  %}
-                <label><input type="checkbox" name="nutr" value="{{ food_name }}+{{ calories }}+{{ carbohydrate }}+{{ protein }}+{{ fat }}+{{ food_code }}">담기 선택</label><br>
-                제조사명: {{ maker_name }}<br>
-                식품명: {{ food_name }}<br>
-                조사년도: {{ research_year }}<br>
-                총내용량: {{ food_size }}<br>
-                열량: {{ calories }}<br>
-                탄수화물(당류): {{ carbohydrate }} ({{ sugars }})<br>
-                단백질: {{ protein }}<br>
-                지방(포화지방): {{ fat }} ({{ saturated_fatty_acid }})<br>
-                <hr>
-            {% endfor %}
+        <input id="input-search" name="search" type="text"/>
+    </form>
+    <div>
+        <form id="form-search-result">
+            {% csrf_token %}
+            <input id="input-add" type="submit" value="담기"><br>
+
+            <table id="table-search-result">
+                <tr>
+                    <th></th>
+                    <th>제조사명</th>
+                    <th>식품명</th>
+                    <th>조사년도</th>
+                    <th>1회제공량(g)</th>
+                    <th>칼로리</th>
+                    <th>탄수화물(당류)</th>
+                    <th>단백질</th>
+                    <th>지방(포화지방)</th>
+                </tr>
+                <tr id="tr-sum">
+                    <td>
+    {#                    <input type="checkbox"/>#}
+                    </td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td id="td-sum-cal"></td>
+                    <td id="td-sum-carb"></td>
+                    <td id="td-sum-pro"></td>
+                    <td id="td-sum-fat"></td>
+                </tr>
+
+                {% for maker_name, food_name, research_year, food_size, calories, carbohydrate, protein, fat, saturated_fatty_acid, sugars, food_code in food_info_list  %}
+                <tr>
+                    <td>
+                        <input type="checkbox" data-code="{{ food_code }}"
+                               data-cal="{{ calories }}"
+                               data-carb="{{ carbohydrate }}"
+                               data-sugar="{{ sugars }}"
+                               data-pro="{{ protein }}"
+                               data-fat="{{ fat }}"
+                               data-unfat="{{ saturated_fatty_acid }}"
+                               name="nutr"
+                               onclick="calc(event)"
+                               value="{{ food_name }}+{{ calories }}+{{ carbohydrate }}+{{ protein }}+{{ fat }}+{{ food_code }}"
+                        />
+                    </td>
+                    <td>{{ maker_name }}</td>
+                    <td>{{ food_name }}</td>
+                    <td>{{ research_year }}</td>
+                    <td>{{ food_size }}</td>
+                    <td>{{ calories }}</td>
+                    <td>{{ carbohydrate }} ({{ sugars }})</td>
+                    <td>{{ protein }}</td>
+                    <td>{{ fat }} ({{ saturated_fatty_acid }})</td>
+                </tr>
+             {% endfor %}
+            </table>ㅑ
         </form>
     </div>
+    {% else %}
+<div id="container-search">
+    <div id="background-search">
+        SEARCH
+    </div>
+        <form id="form-search" class="margin-auto" method="post">
+            {% csrf_token %}
+            <input id="input-search" name="search" type="text"/>
+        </form>
     {% endif %}
 </div>
+{#<div>#}
+{#    <div>#}
+{#        <form method="POST">#}
+{#            {% csrf_token %}#}
+{#            <div>#}
+{#                <label for="search">검색</label>#}
+{#                <input type="text" name="search" id="search">#}
+{#            </div>#}
+{#            <div>#}
+{#                <button type="submit" id="search_button">검색</button>#}
+{#            </div>#}
+{#        </form>#}
+{#        <hr>#}
+{#    </div>#}
+{#    #}
+{#</div>#}
 </body>
+<script type="text/javascript" src="{% static 'js/script.js' %}" ></script>
 </html>
