--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,83 @@ div {
     display: flex;
 }
 
+.background-image {
+    background-image: url("../../static/images/background-index.jpeg");
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    background-size: auto 50%;
+    background-position: center;
+    z-index: -1;
+}
+.background-blur-image::before{
+    background-image: url("../../static/images/background-index.jpeg");
+    background-repeat: no-repeat;
+    position: fixed;
+    left: 0;
+    top: 0;
+    content: " ";
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    filter: blur(10px);
+    z-index: -1;
+}
+.nav a {
+    width: 50%;
+    text-align: center;
+    font-size: 50px;
+}
+#form-login input {
+    width: 100%;
+    height: 50px;
+    margin: 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgba(0,0,0,0.5);
+    text-align: center;
+    color: #fff;
+}
+#form-login button[type="submit"] {
+    width: 100%;
+    height: 50px;
+    border-radius: 20px;
+    border: none;
+}
+
+#form-signup {
+    width: 100%;
+}
+#form-signup label {
+    width: 300px;
+}
+#form-signup input,
+#form-signup select {
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    border: none;
+    background-color: rgba(0,0,0,0.8);
+    text-align: center;
+    color: #fff;
+}
+#form-signup input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: invert(1);
+    padding-right: 20px;
+}
+
+#form-signup select {
+    padding-left: 20px;
+    -webkit-appearance: none;
+}
+#form-signup button[type="submit"] {
+    width: 100%;
+    height: 50px;
+    border-radius: 40px;
+    border: none;
+}
+
 #background {
     background-size: 25px 130vh;
     background-image: radial-gradient(farthest-side at left, transparent 24px, #d3d3d3 1px, transparent 25px);
@@ -51,6 +128,16 @@ div {
     width: 90%;
     border: none;
     border-bottom: 1px solid black;
+}
+
+#input-add {
+    position: absolute;
+    right: 0px;
+    top: 70px;
+    border: none;
+    background: none;
+    width: 200px;
+    font-size: 100px;
 }
 
 #container-footer {
@@ -134,4 +221,30 @@ textarea:focus {
 
 .zindex-1 {
     z-index: 1;
+}
+
+.position-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.font-100 {
+    font-size: 100px;
+}
+
+.justify-content-center {
+    justify-content: center;
 }
