--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,8 @@
 </head>
 {% block content %}
 {% endblock content %}
-
+<script type="text/javascript" src="{% static 'js/script.js' %}" ></script>
 {% block script %}
 {% endblock script %}
+
 </html>
