[0716] 로그인 페이지에서 오류 플래시 메시지가 표시 되지 않는 오류 수정

--- a/dmgcapp/templates/dmgcapp/login.html
+++ b/dmgcapp/templates/dmgcapp/login.html
@@ -3,6 +3,11 @@
 {% block content %}
 
 <body class="background-blur-image">
+    {% if messages %}
+        {% for message in messages %}
+            {{ message.tags }}! {{ message.message }}
+        {% endfor %}
+    {% endif %}
     <div class="background-image position-fixed"></div>
     <div id="container-login" class="position-fixed w-100 flex-column">
         <div class="nav">
