--- a/dmgcapp/templates/dmgcapp/profile_edit.html
+++ b/dmgcapp/templates/dmgcapp/profile_edit.html
@@ -54,7 +54,7 @@ Here is profile edit page.<hr>
                 <label for="goalStepCount">목표 걸음 수</label>
                 <input type="text" name="goalStepCount" id="goalStepCount" value="{{ goal_step_count }}">
             </div>
-            <button type="submit">가입하기</button>
+            <button type="submit">수정하기</button>
     </form>
 </div>
 </body>
