--- a/static/css/style.css
+++ b/static/css/style.css
@@ -131,7 +131,7 @@ div {
     border-bottom: 1px solid black;
 }
 
-#input-add {
+#input-add, #input-delete {
     position: absolute;
     right: 0px;
     top: 120px;
@@ -142,6 +142,7 @@ div {
     z-index: 1;
     cursor: pointer;
 }
+
 
 #container-footer {
     height: 80px;
