--- a/dmgcapp/templates/dmgcapp/calculator.html
+++ b/dmgcapp/templates/dmgcapp/calculator.html
@@ -3,7 +3,7 @@
 <body id="background">
     <div class="nav">
         <a href="{% url 'index' %}">home</a>
-        <a href="{% url 'search' %}">search</a>
+        <a href="/dmgcapp/search/{{ today_string }}">search</a>
     </div>
     <div id="container-week" class="flex-row justify-content-between">
         {% for month, day, day_string in month_day_list %}
