--- a/dmgcapp/templates/dmgcapp/search.html
+++ b/dmgcapp/templates/dmgcapp/search.html
@@ -3,6 +3,7 @@
 <body id="background">
     <div class="nav">
        <a href="{% url 'index' %}">home</a>
+        <a href="/dmgcapp/calculator/{{ today_string }}">calculator</a>
     </div>
     <div id="container-week" class="flex-row justify-content-between">
         {% for month, day, day_string in month_day_list %}
